--- a/configs/x86_64-passwall2.config
+++ b/configs/x86_64-passwall2.config
@@ -1,12 +1,12 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
-
 CONFIG_TARGET_IMAGES_GZIP=y
 
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-ssl=y
 CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-compat=y
 
 CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_curl=y
@@ -15,6 +15,6 @@ CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_luci-app-passwall2=y
 CONFIG_PACKAGE_xray-core=y
 CONFIG_PACKAGE_sing-box=y
-
+# CONFIG_PACKAGE_dnsmasq is not set
 CONFIG_PACKAGE_dnsmasq-full=y
 CONFIG_PACKAGE_ca-bundle=y
