--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,14 +8,16 @@ on:
         required: true
         default: "both"
         type: choice
-        options:
-          - both
-          - clean
-          - passwall2
+        options: [both, clean, passwall2]
       release_version:
         description: "Release version (e.g. v1.0)"
         required: true
         default: "v1.0"
+        type: string
+      passwall_tag:
+        description: "Passwall2/Packages tag (e.g. 26.2.5-1)"
+        required: false
+        default: "26.2.5-1"
         type: string
 
   push:
@@ -70,7 +72,8 @@ jobs:
             rel="${{ inputs.release_version }}"
           else
             tag="${GITHUB_REF##*/}"
-            rel=$(echo "$tag" | grep -oE 'v[0-9]+(\.[0-9]+){0,2}' || echo "v1.0")
+            rel="$(echo "$tag" | grep -oE 'v[0-9]+(\.[0-9]+){0,2}' || true)"
+            [[ -n "$rel" ]] || rel="v1.0"
           fi
           echo "release=$rel" >> "$GITHUB_OUTPUT"
 
@@ -79,14 +82,20 @@ jobs:
         run: |
           set -euo pipefail
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/powershell || true
-          
+          df -h
+
           SWAP_PATH="/mnt/gh-swapfile"
           sudo swapoff "$SWAP_PATH" 2>/dev/null || true
           sudo rm -f "$SWAP_PATH" || true
-          sudo fallocate -l 8G "$SWAP_PATH" || sudo dd if=/dev/zero of="$SWAP_PATH" bs=1M count=8192
+
+          if ! sudo fallocate -l 8G "$SWAP_PATH" 2>/dev/null; then
+            sudo dd if=/dev/zero of="$SWAP_PATH" bs=1M count=8192 status=progress
+          fi
+
           sudo chmod 600 "$SWAP_PATH"
           sudo mkswap "$SWAP_PATH"
           sudo swapon "$SWAP_PATH"
+          sudo swapon --show
           free -h
 
       - name: Install build dependencies
@@ -97,46 +106,43 @@ jobs:
           sudo apt-get install -y --no-install-recommends \
             build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
             gettext git libncurses-dev libssl-dev rsync unzip zlib1g-dev \
-            file wget curl ca-certificates time python3 python3-distutils \
-            python3-setuptools python3-pyelftools gperf swig subversion mercurial
+            file wget curl ca-certificates time \
+            python3 python3-distutils python3-setuptools python3-pyelftools \
+            gperf swig subversion mercurial
+          git --version
+          python3 --version
 
       - name: Clone OpenWrt source
         shell: bash
         run: |
           set -euo pipefail
           git clone --depth=1 --branch "${OWRT_TAG}" "${OWRT_REPO}" openwrt
-          touch openwrt/build.log
+          : > openwrt/build.log
 
-      - name: Add Passwall feeds
+      - name: Add Passwall feeds (pinned tag)
         if: matrix.add_passwall == 'true'
         shell: bash
         run: |
           set -euo pipefail
           cd openwrt
-          echo "src-git passwall_packages https://github.com/Openwrt-Passwall/openwrt-passwall-packages.git;main" >> feeds.conf.default
-          echo "src-git passwall2 https://github.com/Openwrt-Passwall/openwrt-passwall2.git;main" >> feeds.conf.default
 
-      - name: Update and install feeds (Surgeon Edition)
+          PW_TAG="${{ github.event_name == 'workflow_dispatch' && inputs.passwall_tag || '26.2.5-1' }}"
+
+          echo "Using Passwall tag: ${PW_TAG}" | tee -a build.log
+
+          echo "src-git passwall_packages https://github.com/Openwrt-Passwall/openwrt-passwall-packages.git;${PW_TAG}" >> feeds.conf.default
+          echo "src-git passwall2 https://github.com/Openwrt-Passwall/openwrt-passwall2.git;${PW_TAG}" >> feeds.conf.default
+
+          tail -n 30 feeds.conf.default | tee -a build.log
+
+      - name: Update and install feeds (full)
         shell: bash
         run: |
           set -euo pipefail
           cd openwrt
 
-          ./scripts/feeds update -a -f
-
-          if [[ "${{ matrix.add_passwall }}" == "true" ]]; then
-            echo "Patching Passwall2 dependencies..."
-            # 1. 物理移除報錯源碼
-            rm -rf feeds/passwall_packages/geoview || true
-            # 2. 修改 Makefile 移除強依賴項
-            if [ -f feeds/passwall2/luci-app-passwall2/Makefile ]; then
-              sed -i 's/+geoview//g' feeds/passwall2/luci-app-passwall2/Makefile
-              sed -i 's/+v2ray-geoip//g' feeds/passwall2/luci-app-passwall2/Makefile
-              sed -i 's/+v2ray-geosite//g' feeds/passwall2/luci-app-passwall2/Makefile
-            fi
-          fi
-
-          ./scripts/feeds install -a -f
+          ./scripts/feeds update -a 2>&1 | tee -a build.log
+          ./scripts/feeds install -a -f 2>&1 | tee -a build.log
 
           if [[ "${{ matrix.add_passwall }}" == "true" ]]; then
             ./scripts/feeds uninstall dnsmasq 2>/dev/null || true
@@ -149,6 +155,8 @@ jobs:
           key: dl-cache-${{ matrix.id }}-${{ runner.os }}-${{ env.OWRT_BASE }}
           restore-keys: |
             dl-cache-${{ matrix.id }}-${{ runner.os }}-
+            dl-cache-${{ matrix.id }}-
+            dl-cache-
 
       - name: Apply config and run DIY
         shell: bash
@@ -156,53 +164,36 @@ jobs:
           set -euo pipefail
           cd openwrt
 
-          # 使用絕對路徑準確定位 config 文件
-          CONFIG_FILE="$GITHUB_WORKSPACE/${{ matrix.config }}"
-          if [ -f "$CONFIG_FILE" ]; then
-            cp "$CONFIG_FILE" .config
-            echo "Using config: $CONFIG_FILE"
-          else
-            echo "ERROR: Config file not found at $CONFIG_FILE"
+          CONFIG_FILE="${GITHUB_WORKSPACE}/${{ matrix.config }}"
+          if [[ ! -f "$CONFIG_FILE" ]]; then
+            echo "ERROR: Config file not found: $CONFIG_FILE" | tee -a build.log
             exit 1
           fi
 
-          if [[ "${{ matrix.add_passwall }}" == "true" ]]; then
-            force_n() {
-              local key="$1"
-              sed -i "/^${key}=.*/d" .config
-              sed -i "/^# ${key} is not set$/d" .config
-              echo "# ${key} is not set" >> .config
-            }
-            # 強制屏蔽 Rust 及其它不穩定組件
-            force_n CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Shadowsocks_Rust_Client
-            force_n CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Shadowsocks_Rust_Server
-            force_n CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_tuic_client
-            force_n CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Hysteria
-            force_n CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Hysteria2
-            force_n CONFIG_PACKAGE_geoview
-          fi
+          cp "$CONFIG_FILE" .config
+          echo "Using config: $CONFIG_FILE" | tee -a build.log
 
-          # 執行 DIY 腳本（路徑加強版）
-          DIY_PATH="$GITHUB_WORKSPACE/scripts/diy.sh"
-          if [ -f "$DIY_PATH" ]; then
+          DIY_PATH="${GITHUB_WORKSPACE}/scripts/diy.sh"
+          if [[ -f "$DIY_PATH" ]]; then
             chmod +x "$DIY_PATH"
-            bash "$DIY_PATH"
+            bash "$DIY_PATH" 2>&1 | tee -a build.log
           fi
 
-          make defconfig
+          make defconfig 2>&1 | tee -a build.log
 
       - name: Download sources
         shell: bash
         run: |
+          set -euo pipefail
           cd openwrt
-          make download -j8
+          make download -j"$(nproc)" 2>&1 | tee -a build.log
 
       - name: Build firmware
         shell: bash
         run: |
+          set -euo pipefail
           cd openwrt
-          # 2核編譯最穩定
-          make -j2 || make -j1 V=s
+          make -j2 2>&1 | tee -a build.log || make -j1 V=s 2>&1 | tee -a build.log
 
       - name: Upload build log
         if: always()
@@ -215,5 +206,5 @@ jobs:
         if: success()
         uses: actions/upload-artifact@v4
         with:
-          name: HarryWrt-${{ matrix.id }}-${{ steps.meta.outputs.release }}
+          name: HarryWrt-${{ env.OWRT_BASE }}-${{ matrix.id }}-${{ steps.meta.outputs.release }}
           path: openwrt/bin/targets/x86/64/*combined*.img.gz
