--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,9 @@ on:
     tags:
       - "clean-24.10.5-v*"
 
+permissions:
+  contents: write
+
 env:
   OWRT_TAG: "v24.10.5"
   OWRT_REPO: "https://github.com/openwrt/openwrt.git"
@@ -114,7 +117,7 @@ jobs:
           cd openwrt
           make -j"$(nproc)" 2>&1 | tee -a build.log || make -j1 V=s 2>&1 | tee -a build.log
 
-      - name: Upload build log
+      - name: Upload build log artifact
         if: always()
         uses: actions/upload-artifact@v4
         with:
@@ -127,3 +130,13 @@ jobs:
         with:
           name: HarryWrt-24.10.5-clean-${{ steps.meta.outputs.release }}-x86_64
           path: openwrt/bin/targets/x86/64/*combined*.img.gz
+
+      - name: Publish GitHub Release (tag builds only)
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            openwrt/bin/targets/x86/64/*combined*.img.gz
+            openwrt/build.log
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
